--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holy Grail Layout</title>
+    <title>Setembro Amarelo</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Concert+One&family=Grandstander:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>Cabeçalho</header>
+    <header>SETEMBRO AMARELO</header>
     <div class="hg-conteudo">
-        <main>Conteúdo principal</main>
-        <nav>Menu</nav>
-        <aside>Conteúdo secundário</aside>
+        <main>A Vida Não é Brincadeira!!!
+            <p>Setembro Amarelo é o mês (de 1 a 30 de setembro) dedicado à prevenção do suicídio. Trata-se de uma campanha, que teve início no Brasil em 2015, e que visa conscientizar as pessoas sobre o suicídio, bem como evitar o seu acontecimento.
+               Segundo a Organização Mundial de Saúde (OMS), 32 pessoas se suicidam por dia no Brasil, o que significa que o suicídio mata mais brasileiros do que doenças como a AIDS e o câncer.
+               O assunto é envolto em tabus, por isso, a organização da campanha acredita que falar sobre o mesmo é uma forma de entender quem passa por situações que levem a ideias suicidas, podendo ser ajudadas a partir do momento em que as mesmas são identificadas.
+               As situações que levam a esse fim podem surgir de quadros de depressão, bem como do consumo de drogas.
+               É por isso que “Falar é a melhor solução” é o slogan da campanha, cujos envolvidos na sua organização acreditam que conscientizando as pessoas podem prevenir 9 em cada 10 situações de atos suicidas.
+               Se pensar em suicídio busque ajuda. É importante que as pessoas que estejam passando por momentos de crise busquem ajuda. O ideal é um acompanhamento psicológico, além do apoio da família e dos amigos. Para isso, é essencial que as pessoas consigam falar sobre o que sentem.
+            </p>
+        </main>
+        <nav></nav>
+        <aside></aside>
     </div>
-    <footer>Rodapé</footer>
+    <footer>
+        Se você estiver com sérios problemas e chegar a considerar o suicídio, pode procurar ajuda entrando em contato com o Centro de Valorização à Vida (CVV).
+        O site do CVV é <a href="https://www.cvv.org.br/" target="_blank">www.cvv.org.br</a>.
+    </footer>
 </body>
 </html>
